spot-cards-no-fixed-height: Introduced a setting into the universal card component so it can easily be switched between taking up all available height or only wrapping its content.

--- a/prototype/prioss/src/app/page-sub-components/dash-card/dash-card.component.less
+++ b/prototype/prioss/src/app/page-sub-components/dash-card/dash-card.component.less
@@ -1,3 +1,5 @@
-.card {
+
+.max-card-height {
+
     height: 100%;
 }
